Post car doesn't require id anymore, some testing scripts (insert_cars, invoke_advanced-calculations, clear all)

--- a/scripts/template.yml
+++ b/scripts/template.yml
@@ -22,9 +22,7 @@ Resources:
       KeySchema:
         - AttributeName: carID
           KeyType: HASH
-      ProvisionedThroughput:
-        ReadCapacityUnits: 5
-        WriteCapacityUnits: 5
+      BillingMode: PAY_PER_REQUEST
 
   VaporApp:
     Type: AWS::Serverless::Function
